--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Estimate Hours with Fibonacci">
     <meta name="theme-color" content="#2F4550">
     <style>
-      @import url('/css/reset.css');
+      @import url('./css/reset.css');
       @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,500;1,900&display=swap');
       html, body {
         font-size: 10px;
